<resources>
    <string name="app_name">VibeRealm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_email_title">What\'s your email?</string>
    <string name="register_email_desc">Enter the email where you can be contacted</string>
    <string name="register_email_error">Please enter a valid email</string>
    <string name="email_exists">Email already exists!</string>
    <string name="password_incorrect">Incorrect password</string>
    <string name="btn_next">Next</string>
    <string name="register_password_title">Create a password</string>
    <string name="register_password_error">Please enter a valid password</string>
    <string name="register_password_desc">Create a password with at least 6 letters or numbers</string>
    <string name="register_birthday_title">What\'s your birthday?</string>
    <string name="register_birthday_desc">Choose your date of birth</string>
    <string name="register_birthday_error">Please enter a valid date of birth</string>
    <string name="register_name_title">What\'s your name?</string>
    <string name="register_name_desc">Enter the name you want to use</string>
    <string name="register_firstName_error">Please enter a valid first name</string>
    <string name="register_lastName_error">Please enter a valid last name</string>
    <string name="gender_error">Please select a gender</string>
    <string name="dialog_delete_post_title">Delete Post</string>
    <string name="dialog_delete_post_message">Are you sure you want to delete this post?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="comment_sort_options">
        <item>Top</item>
        <item>New</item>
    </string-array>
    <string name="placeholder_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="wait_loading">Wait while loading...</string>
    <string name="loading">Loading</string>
    <string name="pref_login_register_source">Login/Register source</string>
    <string name="pref_login_register_id">Login/Register id</string>
    <string name="pref_imei">imei</string>
    <string name="pref_token">token</string>
    <string name="pref_huawei_token">HuaweiToken</string>
    <string name="pref_is_huawei">isHuawei</string>
    <string name="pref_login_status">loginStatus</string>
    <string name="pref_user_profile">userProfile</string>
    <string name="pref_shown_referral">shownReferral</string>
    <string name="pref_point">POINT</string>
    <string name="bundle">Bundle</string>
    <string name="pref_language">language</string>
    <string name="scan_data">scanData</string>
    <string name="scan_action">scanAction</string>
    <string name="pref_edit_profile_dialog_status">editProfileDialogStatus</string>
    <string name="trx_type">trxType</string>
    <string name="trx_name">trxName</string>
    <string name="tab_category">tabCategory</string>
    <string name="req_type">reqType</string>
    <string name="pref_last_selected_card">LastSelectedCard</string>
    <string name="pref_gpin">GPin</string>
    <string name="pref_isnew">IsNew</string>
    <string name="pref_is_logging_out">isLoggingOut</string>
    <string name="pref_triggered_from_firebase">TriggeredFromFirebase</string>
    <string name="pref_notification_count">NotificationCount</string>
    <string name="pref_is_main_active">IsMainActive</string>
    <string name="pref_last_noti_update_date">LastNotiUpdateDate</string>
    <string name="pref_allow_rate">AllowRate</string>
    <string name="pref_add_image">AddImage</string>
    <string name="pref_email">Email</string>
    <string name="pref_mobile_no">MobileNo</string>
    <string name="pref_name">Name</string>
    <string name="pref_dob">DOB</string>
    <string name="pref_dob_update">DOBUPDATE</string>
    <string name="pref_guid">GUID</string>
    <string name="pref_show_receipt_tips">ShowReceiptTips</string>
    <string name="show_change_pin">ShowChangePin</string>
    <string name="mobile_no_example">Mobile No. (e.g. 60123456789)</string>
    <string name="email">Email</string>
    <string name="Username_is_taken">Username is taken</string>
    <string name="Invalid_merchant">Invalid merchant</string>
    <string name="Invalid_email_mobile">Invalid email/mobile number</string>
    <string name="Invalid_otp">Invalid OTP</string>
    <string name="Expired_otp">The entered OTP has expired</string>
    <string name="Invalid_email_mobile_password">Invalid login ID or password</string>
    <string name="Invalid_member">Invalid member, you will be logged out.</string>
    <string name="Invalid_pin">Invalid PIN</string>
    <string name="Invalid_current_pin">Invalid current PIN</string>
    <string name="Email_registered">This email has been used by other user. If you wish to use this email, please contact us at <a href="mailto:feedback@haiico.com">feedback@haiico.com</a></string>
    <string name="Existing_user_new_signup">We have updated our app to give you better user experience. Please proceed to a one-time simple sign up to continue using our app.</string>
    <string name="Invalid_card">Invalid card</string>
    <string name="Invalid_card_type">Invalid card type</string>
    <string name="Blocked_card">This card has been blocked</string>
    <string name="Card_is_expired">This card has expired</string>
    <string name="Invalid_username">Invalid username</string>
    <string name="Invalid_card_holder_name">Invalid card holder name</string>
    <string name="Invalid_NRIC_Passport">This NRIC/ Passport has already been registered</string>
    <string name="Invalid_address_1">Invalid address 1</string>
    <string name="Invalid_address_2">Invalid address 2</string>
    <string name="Invalid_address_3">Invalid address 3</string>
    <string name="Invalid_postcode">Invalid postcode</string>
    <string name="Invalid_state">Invalid state</string>
    <string name="Invalid_city">Invalid city</string>
    <string name="Invalid_country">Invalid country</string>
    <string name="Blocked_mobile_number">Blocked mobile number</string>
    <string name="Invalid_email">Invalid email</string>
    <string name="Invalid_category">Invalid category</string>
    <string name="Invalid_promotion_code">Invalid promotionCategory code</string>
    <string name="Invalid_start_index">Invalid start index</string>
    <string name="Invalid_end_index">Invalid end index</string>
    <string name="Email_already_registered">Email is already registered</string>
    <string name="Mobile_already_registered">Mobile number is already registered</string>
    <string name="Email_mobile_already_registered">Email/mobile number is already registered</string>
    <string name="Add_email_to_continue">Please add your email to proceed.</string>
    <string name="This_card_already_exists">This card already exists</string>
    <string name="End_of_List">End of list</string>
    <string name="Invalid_length">Invalid length</string>
    <string name="Invalid_authentication_key">Invalid authentication key</string>
    <string name="Server_exception">Sorry, something has gone wrong</string>
    <string name="Connection_to_server_is_unavailable">Connection to the server is unavailable</string>
    <string name="Invalid_response_please_try_again">Invalid response, please try again</string>
    <string name="No_Internet_connection_available">No Internet connection available</string>
    <string name="Connection_timeout">Connection Timeout</string>
    <string name="Insufficient_Amount">Insufficient amount/points</string>
    <string name="Unknown_Error">Unknown Error</string>
    <string name="Voucher_Scaned">Voucher is already redeemed</string>
    <string name="New_Google_Facebook_signup">You are one step away from joining us. Click \"SIGN UP\" after filling your details to help us better reward you.</string>
    <string name="At_least_6_characters">Please enter at least 6 characters</string>
    <string name="err_invalid_pin">Please enter your 6 digits pin</string>
    <string name="err_invalid_email">Please enter a valid email</string>
    <string name="err_invalid_NRIC_length">Please enter your 12 digits NRIC No.</string>
    <string name="err_mismatch_nric_birthdate">Mismatch between NRIC and Date of Birth</string>
    <string name="err_email_mismatch">Email mismatch</string>
    <string name="err_invalid_emailmobile">Please enter a valid email or mobile no.</string>
    <string name="ok">OK</string>
    <string name="err_card_owned_by_other_user">This card is currently owned by other user</string>
    <string name="err_login_with_social_account">Please login with your Facebook/Google/Apple account</string>
    <string name="err_verify_profile">Please complete your profile information at Profile in order to proceed</string>
    <string name="err_result_data">Incorrect result data format</string>
    <string name="err_verify_email">Please verify your account email through the email we sent to you, or login with your registered mobile number</string>
    <string name="err_invalid_id">Invalid ID</string>
    <string name="err_invalid_nric">This NRIC has been used by other user</string>
    <string name="err_insufficient_point">Redemption failed due to insufficient point</string>
    <string name="err_voucher_not_available">This voucher is currently not available</string>
    <string name="err_invalid_referral_code">Invalid referral code</string>
    <string name="err_referral_limit">This referral code has reached its referral limit</string>
    <string name="err_physical_item_not_available">This physical item is currently not available</string>
    <string name="err_not_receiving_otp">Are you experiencing difficulty in receiving your OTP? Kindly request for assistance from our trusted HAi!CO partner/merchant.</string>
    <string name="err_invalid_en_data">Sorry, we encountered an error while processing your request. The data appears to be corrupted and cannot be used. Please try again later or contact our support team for assistance.</string>
    <string name="Member_Details">Details</string>
    <string name="Update_Member_Details">Update Member Details</string>
    <string name="Card_Number">Card Number</string>
    <string name="Card_Holder_Name">Cardholder Name</string>
    <string name="EnterYourName">Please enter your name</string>
    <string name="Address">Address</string>
    <string name="Postcode">Postcode</string>
    <string name="City">City</string>
    <string name="State">State</string>
    <string name="Country">Country</string>
    <string name="Country_Code">Country Code</string>
    <string name="Email">Email</string>
    <string name="Mobile_No">Mobile No.</string>
    <string name="Select_a_state">Select a state</string>
    <string name="Enter_a_state">Please enter your state</string>
    <string name="Select_a_country">Select a country</string>
    <string name="Select_gender">Select gender</string>
    <string name="Select_race">Select race</string>
    <string name="Select_occupation">Select occupation</string>
    <string name="Select_marital_status">Select marital status</string>
    <string name="Select_Have_Children">Select No. of children</string>
    <string name="Confirm_Update">Confirm Update</string>
    <string name="Required">Required</string>
    <string name="Member_details_updated">Member details updated</string>
    <string name="Birthdate">Date of Birth</string>
</resources>